Updated CV June 2021

--- a/example.tex
+++ b/example.tex
@@ -30,7 +30,7 @@
 \vspace{-1.7cm}
 \begin{tcolorbox}[colback=white,colframe=cyan,width=\dimexpr\textwidth+12mm\relax,enlarge left by=-6mm]
 \section{\faStickyNote}{Summary}
-\textbf{Early Career Research Fellow} and \textbf{Population Health PhD} graduate from the \textbf{University of Oxford} with over 5 years experience in \textbf{developing, testing and applying statistical models} to analyse high-dimensional medical imaging data. As a research scientist I have \textbf{cleaned and analysed complex imaging datasets}, applying extensive programming skills (\textbf{Python, R, Matlab, Unix}) to develop replicable analysis workflows and provide data visualisations. These skills are combined with a technical background in \textbf{mathematics}, for which I obtained a \textbf{First Class Honours BSc degree} from the \textbf{University of Warwick}. 
+\textbf{Early Career Research Fellow} and \textbf{Population Health PhD} graduate from the \textbf{University of Oxford} with a passion for \textbf{developing and advancing} methods to analyse \textbf{fMRI data}. As a research scientist I have \textbf{processed and analysed large fMRI datasets}, using the three main fMRI software packages (\textbf{AFNI, FSL, SPM}) and applying programming skills (\textbf{Python, R, Matlab, Unix}) to conduct data manipulation and develop replicable analysis workflows. These skills are combined with a technical background in \textbf{mathematics}, for which I obtained a \textbf{First Class Honours BSc degree} from the \textbf{University of Warwick}. 
   
 \end{tcolorbox}
 
@@ -41,7 +41,11 @@
 {\begin{addmargin}[2em]{1em}
     Thesis: \href{https://doi.org/10.31237/osf.io/mj7qa}{On the Reproducibility and Interpretability of Group-Level Task-fMRI Results} \\
     Supervisors: Professor Thomas Nichols, Professor Stephen Smith \\
-    Examiners: Professor Mark Woolrich, Professor Ian Dryden 
+    Examiners: Professor Mark Woolrich, Professor Ian Dryden
+    \begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
+    \item Developed a novel `Confidence Sets' method for group-level inference on task-fMRI effect-size maps. Similar to confidence intervals, the Confidence Sets convey information about brains regions where effect sizes have exceeded and fallen short of a \textit{non-zero} threshold. This research led to two publications in the \textit{NeuroImage} journal, where the Confidence Sets were developed for application to raw \%BOLD and Cohen's \textit{d} effect-size images, respectively.  
+    \item Carried out a project to assess the reproducibility of task-fMRI results when different software packages are used to analyse the data. Reproduced the results of three published task-fMRI studies in the three main fMRI software packages (AFNI,FSL,SPM), and applied a range of quantitative methods to assess the similarity between the results. This research was published in the \textit{Human Brain Mapping} journal, and has an Attention Score ranking it in the top 5\% of all research outputs scored by Altmetric.  
+    \end{itemize}
 \end{addmargin}}
     
 \work{University of Warwick \hfill Coventry, UK}{\uline{\textmyfont{Batchelor of Science in Mathematics} \hfill \textmyfont{Sep 2012 - Jul 2015}}}%
@@ -99,7 +103,7 @@ Pauli R, \textbf{Bowring A}, Reynolds R, Chen G, Nichols TE, Maumet C. Exploring
 \leftskip=0em
 \parindent 0em
 
-\section{\faBarChart}{Conference Presentations}
+\section{\faBarChart}{Selected Conference Presentations}
 \leftskip=2em
 \parindent=-2em
 
@@ -168,14 +172,36 @@ Pauli R, \textbf{Bowring A}, Reynolds R, Chen G, Nichols TE, Maumet C. Exploring
 \end{addmargin}}
 
    
+\section{\faPencil}{Further Training}
 
+\work{University of Oxford \hfill Oxford, UK}{\uline{\textmyfont{fMRIB Graduate Programme} \hfill \textmyfont{Oct 2017 - Jul 2017}}}%
+    {\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
+    \item Learned about the scanning and analysis methodologies used for three different modalities of neuroimaging: functional MRI, structural MRI, and diffusion MRI.  
+    \item Carried out practical examples using the methods I was taught within FSL. 
+    \item Completed an exam at the end of each term. For the MRI Physics and MRI Analysis exams, I achieved scores of 91\% and 88\% respectively. 
+    \end{itemize}
+    }%
+
+\work{Lake Como School of Advanced Studies \hfill Lake Como, Italy}{\uline{\textmyfont{Bocconi Summer School in Advanced Statistics and Probability} \hfill \textmyfont{Jul 2017}}}%
+    {\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
+    \item One of 30 international students selected to participate in the summer school. 
+    \item Learned about how statistical causal learning models can provide insight into machine learning tasks such as domain adaptation, transfer learning, and semi-supervised learning. 
+    \end{itemize}
+    }%
+     
+\work{Cambridge/Oxford/Durham/Glasgow Universities \hfill UK}%
+    {\uline{\textmyfont{Academy for PhD Training in Statistics (APTS)} \hfill \textmyfont{Dec 2016 - Aug 2017}}}%
+    {\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
+    \item Completed four residential weeks of training in statistics and probability during the first year of my PhD (one week at each university).
+    \item Learned about various aspects of statistical modelling, statistical inference and statistical computing across a total of eight intensive course modules.
+    \end{itemize}
+    }%
 
 \section{\faGears}{SKILLS}
 
 \textbf{Technical:} Python, R, Matlab, Unix, Github. \\
 \textbf{Neuroimaging Analysis Software:} AFNI, FSL, SPM.  \\
 \textbf{Research:} Data Preprocessing, Data Analysis, Statistical Testing, Simulations, Analysis of large neuroimaging datasets: UK Biobank, Human Connectome Project. \\
-\textbf{Miscellaneous:} Holder of a full UK Driving Licence.
 
 \section{\faLaptop}{Covid-19 County Case Tracker}
 
