Removed colour from CV, made title text less pretentious

--- a/example.tex
+++ b/example.tex
@@ -16,8 +16,8 @@
 
 \begin{document}
 \begin{multicols}{2}[
-    \titletext{Alexander}%
-        {Bowring}%
+    \titletext{}%
+    		{Alexander Bowring}
         {Population Health PhD, Mathematics BSc}%
         {(+44) 7944 240731}%
         {\href{mailto:alex.bowring@bdi.ox.ac.uk}{alex.bowring@bdi.ox.ac.uk}}%
@@ -28,7 +28,7 @@
 \end{multicols}
 
 \vspace{-1.7cm}
-\begin{tcolorbox}[colback=white,colframe=cyan,width=\dimexpr\textwidth+12mm\relax,enlarge left by=-6mm]
+\begin{tcolorbox}[colback=white,colframe=black,width=\dimexpr\textwidth+12mm\relax,enlarge left by=-6mm]
 \section{\faStickyNote}{Summary}
 \textbf{Early Career Research Fellow} and \textbf{Population Health PhD} graduate from the \textbf{University of Oxford} with a passion for \textbf{developing and advancing} methods to analyse \textbf{fMRI data}. As a research scientist I have \textbf{processed and analysed large fMRI datasets}, using the three main fMRI software packages (\textbf{AFNI, FSL, SPM}) and applying programming skills (\textbf{Python, R, Matlab, Unix}) to conduct data manipulation and develop replicable analysis workflows. These skills are combined with a technical background in \textbf{mathematics}, for which I obtained a \textbf{First Class Honours BSc degree} from the \textbf{University of Warwick}. 
   
