--- a/example.tex
+++ b/example.tex
@@ -197,7 +197,7 @@ Pauli R, \textbf{Bowring A}, Reynolds R, Chen G, Nichols TE, Maumet C. Exploring
     \end{itemize}
     }%
 
-\section{\faGears}{SKILLS}
+\section{\faGears}{Skills}
 
 \textbf{Technical:} Python, R, Matlab, Unix, Github. \\
 \textbf{Neuroimaging Analysis Software:} AFNI, FSL, SPM.  \\
