--- a/example.tex
+++ b/example.tex
@@ -20,7 +20,7 @@
     		{Alexander Bowring}
         {Population Health PhD, Mathematics BSc}%
         {(+44) 7944 240731}%
-        {\href{mailto:alex.bowring@bdi.ox.ac.uk}{alex.bowring@bdi.ox.ac.uk}}%
+        {\href{mailto:alex40466@hotmail.com}{alex40466@hotmail.com}}%
         {\href{https://www.linkedin.com/in/alexander-bowring/}{alexander-bowring}}%
         {\href{https://github.com/AlexBowring/}{AlexBowring}}
 ]
@@ -30,181 +30,207 @@
 \vspace{-1.7cm}
 \begin{tcolorbox}[colback=white,colframe=black,width=\dimexpr\textwidth+12mm\relax,enlarge left by=-6mm]
 \section{\faStickyNote}{Summary}
-\textbf{Early Career Research Fellow} and \textbf{Population Health PhD} graduate from the \textbf{University of Oxford} with a passion for \textbf{developing and advancing} methods to analyse \textbf{fMRI data}. As a research scientist I have \textbf{processed and analysed large fMRI datasets}, using the three main fMRI software packages (\textbf{AFNI, FSL, SPM}) and applying programming skills (\textbf{Python, R, Matlab, Unix}) to conduct data manipulation and develop replicable analysis workflows. These skills are combined with a technical background in \textbf{mathematics}, for which I obtained a \textbf{First Class Honours BSc degree} from the \textbf{University of Warwick}. 
+\textbf{Senior Mathematical Consultant} and \textbf{Technical Lead}, passionate about applying \textbf{statistics}, \textbf{machine learning}, and \textbf{optimisation} to deliver actionable solutions to ambitious technical challenges. I have led technical teams across a \textbf{portfolio of projects exceeding £1M} in revenue, receiving \textbf{national awards} for innovation and impact. Skilled in programming languages: \textbf{Python}, \textbf{R}, \textbf{SQL}; libraries and frameworks: \textbf{LightGBM}, \textbf{PyTorch}, \textbf{pandas}, \textbf{scikit-learn}, \textbf{tidyverse}; and platforms and tools: \textbf{Azure DevOps}, \textbf{Git}, \textbf{AWS}, and \textbf{Power BI}. These skills are grounded in a technical background in statistics and mathematics, with a \textbf{PhD in Population Health from Oxford University} and \textbf{First-Class BSc in Mathematics from Warwick University}.
+
+
   
 \end{tcolorbox}
 
+\section{\faBriefcase}{Professional Experience}
+
+\work{Senior Mathematical Consultant (previously Mathematical Consultant) \hfill Oxford, UK}{\uline{\textmyfont{Smith Institute} \hfill \textmyfont{Nov 2021 - Present}}}%
+    {\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
+\item \textbf{Lead technical teams} and \textbf{oversee all technical aspects of projects} delivering advanced mathematical solutions to \textbf{large industry clients}, collaborating closely with diverse stakeholders and \textbf{disseminating findings regularly}.
+  \item Lead the \textbf{\href{https://www.neso.energy/news/dynamic-reserve-setting-innovation-project-seeks-reduce-balancing-costs}{Dynamic Reserve Setting (DRS)}} project with the National Energy System Operator (NESO), developing \textbf{explainable AI models} that are \textbf{productionised} in the control room with a Power BI dashboard, \textbf{saving NESO gigawatts in reserve procurement and millions of pounds annually}.
+  \item DRS project recognised with the \textbf{\href{https://www.theorsociety.com/ORS/ORS/About-OR/News/Presidents-Medal-award.aspx}{Operational Research Society Presidents Medal Award 2024}} for the best practical application of operational research.
+\item Principal model developer for the \textbf{\href{https://ssen-innovation.co.uk/nia-projects/vfes/}{Vulnerability Future Energy Scenarios (VFES)}} project with \textbf{Scottish and Southern Electricity Networks (SSEN)}, creating an \textbf{explainable AI model} to analyse vulnerability drivers and provide enhanced \textbf{decision intelligence} for strategic optimisation of customer support.
+  \item VFES project recognised with the \textbf{\href{https://www.ssen.co.uk/news-views/2024/SSENs-innovative-net-zero-programmes-win-big-at-the-2024-Utility-Week-awards/}{Utility Week Unlocking Data Award 2024}} and the \textbf{\href{https://www.dataiq.global/award-winner/2024-dataiq-awards-best-use-of-ai-for-the-public-good/}{DataIQ Award for Best Use of AI for the Public Good 2024}}.
+  \item Led the implementation of \textbf{classification models using recurrent neural networks (RNNs)} for a \textbf{defence and security project}.
+    \end{itemize}
+    }%
+
+\work{Early Career Research Fellow in Neuroimaging Statistics \hfill Oxford, UK}{\uline{\textmyfont{Nuffield Department of Population Health, University of Oxford} \hfill \textmyfont{Nov 2019 - Nov 2021}}}%
+{\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt]    
+    \item Led research on variability in MRI results caused by differences in analytic workflows, using \textbf{Python}, \textbf{Matlab}, and \textbf{Unix} to run parallel analyses on a computing cluster.
+    \item Developed \textbf{statistical methods} to assess the similarity of spatial maps and created \textbf{Python notebooks} for analysis and visualization.
+    \item Organized and led a weekly \textbf{Neuroimaging Statistics Oxford reading group} featuring international experts.
+    \item Taught PhD students \textbf{statistical methods}, \textbf{programming skills}, and aspects of \textbf{independent research}.
+\end{itemize}
+}%
+
+\work{Research Assistant in Neuroimaging Statistics \hfill Coventry, UK}{\uline{\textmyfont{Warwick Manufacturing Group, University of Warwick} \hfill \textmyfont{Nov 2015 - Oct 2016}}}%
+{\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
+    \item Developed standard practices for \textbf{data-sharing} and \textbf{meta-analysis} in neuroimaging, improving reproducibility and collaboration.
+    \item Performed extensive \textbf{fMRI analyses} using major neuroimaging software and maintained version control with \textbf{GitHub}, sharing results via online repositories.
+    \item Mentored a visiting \textbf{PhD student} on a short-term research project that was subsequently published.
+\end{itemize}
+}%
+     
+\work{Undergraduate Research Intern \hfill Coventry, UK}%
+{\uline{\textmyfont{Undergraduate Research Support Scheme, University of Warwick} \hfill \textmyfont{Jun 2015 - Oct 2015}}}%
+{\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
+    \item Assisted in developing software to \textbf{visualise fMRI results} and tested research prototypes through \textbf{data analysis}.
+    \item Gained hands-on experience in \textbf{collaborative research} and effective \textbf{communication} with supervisors and team members.
+\end{itemize}
+}%    
 
 \section{\faGraduationCap}{Education}
 
-\work{Nuffield Department of Population Health, University of Oxford  \hfill Oxford, UK}{\uline{\textmyfont{Doctor of Philosophy in Population Health} \hfill \textmyfont{Oct 2016 - Nov 2019}}}%
+
+\work{Doctor of Philosophy in Population Health \hfill Oxford, UK}{\uline{\textmyfont{Nuffield Department of Population Health, University of Oxford} \hfill \textmyfont{Oct 2016 - Nov 2019}}}%
 {\begin{addmargin}[2em]{1em}
-    Thesis: \href{https://doi.org/10.31237/osf.io/mj7qa}{On the Reproducibility and Interpretability of Group-Level Task-fMRI Results} \\
-    Supervisors: Professor Thomas Nichols, Professor Stephen Smith \\
-    Examiners: Professor Mark Woolrich, Professor Ian Dryden
+    Thesis: \href{https://doi.org/10.31237/osf.io/mj7qa}{On the Reproducibility and Interpretability of Group-Level Task-fMRI Results} 
     \begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
-    \item Developed a novel `Confidence Sets' method for group-level inference on task-fMRI effect-size maps. Similar to confidence intervals, the Confidence Sets convey information about brains regions where effect sizes have exceeded and fallen short of a \textit{non-zero} threshold. This research led to two publications in the \textit{NeuroImage} journal, where the Confidence Sets were developed for application to raw \%BOLD and Cohen's \textit{d} effect-size images, respectively.  
-    \item Carried out a project to assess the reproducibility of task-fMRI results when different software packages are used to analyse the data. Reproduced the results of three published task-fMRI studies in the three main fMRI software packages (AFNI,FSL,SPM), and applied a range of quantitative methods to assess the similarity between the results. This research was published in the \textit{Human Brain Mapping} journal, and has an Attention Score ranking it in the top 5\% of all research outputs scored by Altmetric.  
+        \item Developed a novel \textbf{Confidence Sets method} for group-level inference on task-fMRI effect-size maps, resulting in two publications in \textit{NeuroImage}.
+        \item Evaluated reproducibility of task-fMRI results across software packages (AFNI, FSL, SPM), leading to a publication in \textit{Human Brain Mapping} ranked in the top 5\% of research outputs by Altmetric.
     \end{itemize}
+\end{addmargin}}
+
+\work{Bachelor of Science in Mathematics \hfill University of Warwick, UK}{\uline{\textmyfont{University of Warwick} \hfill \textmyfont{Sep 2012 - Jul 2015}}}%
+{\begin{addmargin}[2em]{1em}
+    Graduated with \textbf{First Class Honours}, achieving >80\% in modules including Algebra II, Analysis III, Galois Theory, Programming for Scientists, and Mathematics by Computer.
+\end{addmargin}}
+
+\section{\faPencil}{Further Information}
+{\begin{addmargin}[2em]{1em}
+\textbf{Publications:} Several publications in high-impact journals including \textit{Nature}, \textit{NeuroImage}, and \textit{Human Brain Mapping}. Full list available at \href{https://scholar.google.com/citations?user=h4aoOucAAAAJ}{Google Scholar}.
+
+\hspace{-1.5em}\textbf{Technical Skills:} 
+\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt]
+    \item \textbf{Analytical:} Frequentist statistics, machine learning, gradient boosting, linear optimisation, data visualisation, feature engineering, explainable AI, neural networks
+    \item \textbf{Programming Languages:} Python, R, SQL, Bash, RDF, Cypher
+    \item \textbf{Libraries / Frameworks:} LightGBM, XGBoost, optuna, PyTorch, pandas, polars, scikit-learn, numpy, matplotlib, tidyverse
+    \item \textbf{Tools / Platforms:} Power BI, Git, Azure DevOps, AWS, Neo4j, Microsoft Excel
+    \item \textbf{Development Environments:} PyCharm, RStudio
+\end{itemize}
 \end{addmargin}}
     
-\work{University of Warwick \hfill Coventry, UK}{\uline{\textmyfont{Batchelor of Science in Mathematics} \hfill \textmyfont{Sep 2012 - Jul 2015}}}%
-    {\begin{addmargin}[2em]{1em}
-    Graduated with \textbf{First Class Honours}, achieving a score of >80\% in modules including: Algebra II, Analysis III, Galois Theory, Programming for Scientists and Mathematics by Computer.
-\end{addmargin}}
-    
-\section{\faBriefcase}{Professional Experience}
-
-\work{Nuffield Department of Population Health, University of Oxford \hfill Oxford, UK}{\uline{\textmyfont{Early Career Research Fellow in Neuroimaging Statistics} \hfill \textmyfont{Nov 2019 - Present}}}%
-    {\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
-    \item Led a research project to investigate the variability of MRI results attributable to differences in the numerous analytic strategies that are implemented to process functional imaging data. 
-    \item Designed and carried out a `multiverse' of analysis workflows on open MRI datasets, using Python, Matlab and Unix programming to conduct multiple analyses in parallel on a computing cluster.
-    \item Developed statistical methods to assess the similarity of spatial statistical maps, and created Python notebooks to apply these methods and visualise the results.
-    \item Led the `Neuroimaging Statistics Oxford' reading group, where I organised weekly talks at the university from international expert speakers in the field of neuroimaging statistics. 
-    \item Contributed to wider academics activities within the university that included teaching PhD students statistical methods, programming skills, and aspects of performing independent research.
-    \end{itemize}
-    }%
-
-\work{Warwick Manufacturing Group, University of Warwick \hfill Coventry, UK}{\uline{\textmyfont{Research Assistant in Neuroimaging Statistics} \hfill \textmyfont{Nov 2015 - Oct 2016}}}%
-    {\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
-    \item Developed standard practices for data-sharing and meta-analysis in neuroimaging as part of the project ``Transforming Statistical Methodology for Neuroimaging Meta-Analysis”. 
-    \item Carried out extensive analyses of fMRI data, gaining substantial experience in the main software packages used to analyse imaging data.
-    \item Documented my research efforts and provided version control of my analyses with Github. Used online data repositories to share my analysis results. 
-    \item Mentored a PhD student that visited our lab for three months. The research project we carried out in this time frame was subsequently published in a peer-reviewed journal. 
-    \end{itemize}
-    }%
-     
-\work{Undergraduate Research Support Scheme, University of Warwick \hfill Coventry, UK}%
-    {\uline{\textmyfont{Undergraduate Research Intern} \hfill \textmyfont{Jun 2015 - Oct 2015}}}%
-    {\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
-    \item Assisted in developing software that provided visualisations of neuroimaging results for an undergraduate research project ``Visualising the brain - Developing viewers of standardised fMRI results". 
-    \item Conducted analyses of neuroimaging data to test and debug research prototypes of the viewer. 
-    \item Gained experience in academic research, attending department meetings alongside PhD students and post-doctoral researchers and communicating daily with my supervisor.
-    \end{itemize}
-    }%
-    
-\section{\faBook}{Publications}
-\leftskip=2em
-\parindent=-2em
-
-\hspace{-2em}\textbf{Bowring A}, Telschow F, Schwartzman A, Nichols TE. Confidence Sets for Cohen's \textmyfont{d} effect size images. \textmyfont{NeuroImage.} 2021. 
-
-\textbf{Bowring A}, Telschow F, Schwartzman A, Nichols TE. Spatial confidence sets for raw effect size images. \textmyfont{NeuroImage.} 2019. 
-
-\textbf{Bowring A}, Maumet C, Nichols TE. Exploring the impact of analysis software on task fMRI results. \textmyfont{Human Brain Mapping.} 2019.\\
-\textbf{Altmetric Attention Score ranking in the top 5\% of all research outputs scored by Altmetric.}
-
-Botvinik-Nezer R, Holzmeister  F, \dots, \textbf{Bowring A}, \dots, Schonberg T. Variability in the analysis of a single neuroimaging dataset by many teams. \textmyfont{Nature.} 2020. 
-
-Maumet C, Auer T, \textbf{Bowring A}, \dots, Nichols TE. Sharing brain mapping statistical results with the neuroimaging data model. \textmyfont{Nature Scientific Data.} 2016.
-
-Pauli R, \textbf{Bowring A}, Reynolds R, Chen G, Nichols TE, Maumet C. Exploring fMRI Results Space: 31 Variants of an fMRI Analysis in AFNI, FSL, and SPM. \textmyfont{Frontiers in Neuroinformatics.} 2016.
-
-\leftskip=0em
-\parindent 0em
-
-\section{\faBarChart}{Selected Conference Presentations}
-\leftskip=2em
-\parindent=-2em
-
-\hspace{-2em}(Poster Presentation, Upcoming) Identifying Sources of Software-dependent Differences in Task fMRI Analyses, \textmyfont{27th Annual Meeting of the Organization for Human Brain Mapping}, Online (due to Covid-19 pandemic), June 21-25 2021.\\
-\textbf{One of <5\% of submissions selected by the Program Committee as an exceptional abstract. }
-
-(Poster Presentation) Spatial Confidence Sets for Standardized Effect Size Images, \textmyfont{26th Annual Meeting of the Organization for Human Brain Mapping}, Online (due to Covid-19 pandemic), June 23-July 3 2020. 
-
-(Twitter Presentation) \href{https://twitter.com/OHBMequinoX/status/1240926466302500864}{Confidence Sets for Cohen’s \textmyfont{d} Effect Size Images}, \textmyfont{Organization for Human Brain Mapping Equinox Twitter Conference}, Online, March 20 2020. 
-
-(Oral \& Poster Presentation) \href{https://www.pathlms.com/ohbm/courses/8246/sections/12541/video_presentations/116000}{Same Data – Different Software – Different Results? Analytic Variability of Group fMRI Results.}, \textmyfont{24th Annual Meeting of the Organization for Human Brain Mapping}, Singapore, June 17-21 2018. \\
-\textbf{Winner of a \$2,000 OHBM Merit Abstract Award.} \\
-\textbf{One of <5\% of submissions selected by the Program Committee for an oral presentation. }
-
-(Oral \& Poster Presentation) \href{https://www.pathlms.com/ohbm/courses/5158/sections/7816/video_presentations/78445}{Spatial Confidence Sets - Beyond Null Hypothesis Testing of Cluster Size}, \textmyfont{23rd Annual Meeting of the Organization for Human Brain Mapping}, Vancouver, Canada, June 25-29 2017. \\
-\textbf{One of <5\% of submissions selected by the Program Committee for an oral presentation. }
-
-(Poster Presentation) Impact of Analysis Software on Replication of fMRI Studies, \textmyfont{23rd Annual Meeting of the Organization for Human Brain Mapping}, Vancouver, Canada, June 25-29 2017.
-
-(Oral Presentation) Towards reproducible brain imaging research, \textmyfont{WIN Annual Conference}, Coventry, January 24 2017.
-
-(Poster Presentation) Confidence Sets - Going Beyond Voxel-level and Cluster-level Null Hypothesis Testing, \textmyfont{22nd Annual Meeting of the Organization for Human Brain Mapping}, Geneva, Switzerland, June 26-30 2016.
-
-\leftskip=0em
-\parindent=0em
-
-\section{\faPencilSquareO}{Teaching Experience}
-
-\uline{\large\bfseries{University of Oxford}  \hfill \large\bfseries{Oxford, UK}}
-{\begin{addmargin}[2em]{0em}
-
-    \textmyfont{Data Sherpa for Covid-19 Data Challenge \hfill Michaelmas 2020}
-    \begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
-    \item Mentored three PhD students in analysing Covid-19 data obtained from Oxfordshire hospitals to investigate the impact of Covid-19 on diabetes and glycaemic control.
-    \item Prepared the data for the students, carrying out data cleaning on electronic health records from thousands of hospital patients using Python.
-    \end{itemize}
-    \textmyfont{Statistics Demonstrator \hfill Michaelmas 2019, 2020}
-    \begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
-    \item Led online tutorials for PhD students enrolled in the graduate Statistics course where I assisted in practical exercises on modern statistical methods and machine learning.
-    \item Taught students the fundamentals of regularised regression and Gaussian predictive models for machine learning.
-    \end{itemize}
-    \textmyfont{Introduction to Python Course Leader \hfill Michaelmas 2020}
-    \begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
-    \item Ran an introductory course on Python programming for a class of graduate students enrolled in the Centre for Doctoral Training PhD programme.
-    \item Taught students about how to use the fundamental functions and packages needed for programming in Python, including tutorials on the numpy, pandas and scipy packages.
-    \end{itemize}
-\end{addmargin}}
-\vspace{0.2cm}
-\uline{\large\bfseries{University of Warwick}  \hfill \large\bfseries{Coventry, UK}}
-{\begin{addmargin}[2em]{0em}
-    \textmyfont{Statistics Tutor \hfill Spring 2017}
-    \begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
-    \item Led tutorials for a group of 20 undergraduate Statistics students taking the ST111 and ST112: Probabiliy A \& B modules.
-    \item Taught students about the foundational notions of mathematical probability and marked assignments for each module.
-     \end{itemize}
-\end{addmargin}}
-\vspace{0.2cm}
-\uline{\large\bfseries{Teach First Insight Programme}  \hfill \large\bfseries{London, UK}}
-{\begin{addmargin}[2em]{0em}
-    \textmyfont{Teaching Intern \hfill Summer 2015}
-    \begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
-    \item Selected for a summer internship with Teach First to help tackle social inequality in the UK education system.
-    \item Planned and delivered lessons to a class of 30+ students at Cranford Community College, Hounslow, interacting with students between the ages of 11 and 18.  
-    \item Gave a presentation on my experiences to senior Teach First employees in Canary Wharf. 
-     \end{itemize}
-\end{addmargin}}
-
-   
-\section{\faPencil}{Further Training}
-
-\work{University of Oxford \hfill Oxford, UK}{\uline{\textmyfont{fMRIB Graduate Programme} \hfill \textmyfont{Oct 2017 - Jul 2017}}}%
-    {\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
-    \item Learned about the scanning and analysis methodologies used for three different modalities of neuroimaging: functional MRI, structural MRI, and diffusion MRI.  
-    \item Carried out practical examples using the methods I was taught within FSL. 
-    \item Completed an exam at the end of each term. For the MRI Physics and MRI Analysis exams, I achieved scores of 91\% and 88\% respectively. 
-    \end{itemize}
-    }%
-
-\work{Lake Como School of Advanced Studies \hfill Lake Como, Italy}{\uline{\textmyfont{Bocconi Summer School in Advanced Statistics and Probability} \hfill \textmyfont{Jul 2017}}}%
-    {\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
-    \item One of 30 international students selected to participate in the summer school. 
-    \item Learned about how statistical causal learning models can provide insight into machine learning tasks such as domain adaptation, transfer learning, and semi-supervised learning. 
-    \end{itemize}
-    }%
-     
-\work{Cambridge/Oxford/Durham/Glasgow Universities \hfill UK}%
-    {\uline{\textmyfont{Academy for PhD Training in Statistics (APTS)} \hfill \textmyfont{Dec 2016 - Aug 2017}}}%
-    {\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
-    \item Completed four residential weeks of training in statistics and probability during the first year of my PhD (one week at each university).
-    \item Learned about various aspects of statistical modelling, statistical inference and statistical computing across a total of eight intensive course modules.
-    \end{itemize}
-    }%
-
-\section{\faGears}{Skills}
-
-\textbf{Technical:} Python, R, Matlab, Unix, Github. \\
-\textbf{Neuroimaging Analysis Software:} AFNI, FSL, SPM.  \\
-\textbf{Research:} Data Preprocessing, Data Analysis, Statistical Testing, Simulations, Analysis of large neuroimaging datasets: UK Biobank, Human Connectome Project. \\
-
 \section{\faLaptop}{Covid-19 County Case Tracker}
+From March 2020-January 2021 I developed and maintained the \href{https://covid19cct.shinyapps.io/covid19cct/}{\textit{Covid-19 County Case Tracker}} R Shinyapp. I used R programming to harvest publicly available national Covid-19 data and provide visualisations of the trends in Covid-19 cases at the county-level in England and Scotland. During the first UK lockdown the app received over 100+ hours of usage per day, garnering attention from radio and media outlets including the \href{https://www.oxfordmail.co.uk/news/18358052.app-tracks-oxfordshire-covid-19-cases/}{Oxford Mail}.
 
-From March 2020-January 2021 I developed and maintained the \href{https://covid19cct.shinyapps.io/covid19cct/}{\textit{Covid-19 County Case Tracker}} R Shinyapp. I used R programming to harvest publicly available national Covid-19 data and provide visualisations of the trends in Covid-19 cases at the county-level in England and Scotland. During the first UK lockdown the app received over 100+ hours of usage per day, garnering attention from radio and media outlets including \href{https://grm.digital/heroes-of-covid19/info/}{GRM Digital} and the \href{https://www.oxfordmail.co.uk/news/18358052.app-tracks-oxfordshire-covid-19-cases/}{Oxford Mail}.
+%
+%\section{\faBook}{Publications}
+%\leftskip=2em
+%\parindent=-2em
+%
+%\hspace{-2em}\textbf{Bowring A}, Telschow F, Schwartzman A, Nichols TE. Confidence Sets for Cohen's \textmyfont{d} effect size images. \textmyfont{NeuroImage.} 2021. 
+%
+%\textbf{Bowring A}, Telschow F, Schwartzman A, Nichols TE. Spatial confidence sets for raw effect size images. \textmyfont{NeuroImage.} 2019. 
+%
+%\textbf{Bowring A}, Maumet C, Nichols TE. Exploring the impact of analysis software on task fMRI results. \textmyfont{Human Brain Mapping.} 2019.\\
+%\textbf{Altmetric Attention Score ranking in the top 5\% of all research outputs scored by Altmetric.}
+%
+%Botvinik-Nezer R, Holzmeister  F, \dots, \textbf{Bowring A}, \dots, Schonberg T. Variability in the analysis of a single neuroimaging dataset by many teams. \textmyfont{Nature.} 2020. 
+%
+%Maumet C, Auer T, \textbf{Bowring A}, \dots, Nichols TE. Sharing brain mapping statistical results with the neuroimaging data model. \textmyfont{Nature Scientific Data.} 2016.
+%
+%Pauli R, \textbf{Bowring A}, Reynolds R, Chen G, Nichols TE, Maumet C. Exploring fMRI Results Space: 31 Variants of an fMRI Analysis in AFNI, FSL, and SPM. \textmyfont{Frontiers in Neuroinformatics.} 2016.
+%
+%\leftskip=0em
+%\parindent 0em
+%
+%\section{\faBarChart}{Selected Conference Presentations}
+%\leftskip=2em
+%\parindent=-2em
+%
+%\hspace{-2em}(Poster Presentation, Upcoming) Identifying Sources of Software-dependent Differences in Task fMRI Analyses, \textmyfont{27th Annual Meeting of the Organization for Human Brain Mapping}, Online (due to Covid-19 pandemic), June 21-25 2021.\\
+%\textbf{One of <5\% of submissions selected by the Program Committee as an exceptional abstract. }
+%
+%(Poster Presentation) Spatial Confidence Sets for Standardized Effect Size Images, \textmyfont{26th Annual Meeting of the Organization for Human Brain Mapping}, Online (due to Covid-19 pandemic), June 23-July 3 2020. 
+%
+%(Twitter Presentation) \href{https://twitter.com/OHBMequinoX/status/1240926466302500864}{Confidence Sets for Cohen’s \textmyfont{d} Effect Size Images}, \textmyfont{Organization for Human Brain Mapping Equinox Twitter Conference}, Online, March 20 2020. 
+%
+%(Oral \& Poster Presentation) \href{https://www.pathlms.com/ohbm/courses/8246/sections/12541/video_presentations/116000}{Same Data – Different Software – Different Results? Analytic Variability of Group fMRI Results.}, \textmyfont{24th Annual Meeting of the Organization for Human Brain Mapping}, Singapore, June 17-21 2018. \\
+%\textbf{Winner of a \$2,000 OHBM Merit Abstract Award.} \\
+%\textbf{One of <5\% of submissions selected by the Program Committee for an oral presentation. }
+%
+%(Oral \& Poster Presentation) \href{https://www.pathlms.com/ohbm/courses/5158/sections/7816/video_presentations/78445}{Spatial Confidence Sets - Beyond Null Hypothesis Testing of Cluster Size}, \textmyfont{23rd Annual Meeting of the Organization for Human Brain Mapping}, Vancouver, Canada, June 25-29 2017. \\
+%\textbf{One of <5\% of submissions selected by the Program Committee for an oral presentation. }
+%
+%(Poster Presentation) Impact of Analysis Software on Replication of fMRI Studies, \textmyfont{23rd Annual Meeting of the Organization for Human Brain Mapping}, Vancouver, Canada, June 25-29 2017.
+%
+%(Oral Presentation) Towards reproducible brain imaging research, \textmyfont{WIN Annual Conference}, Coventry, January 24 2017.
+%
+%(Poster Presentation) Confidence Sets - Going Beyond Voxel-level and Cluster-level Null Hypothesis Testing, \textmyfont{22nd Annual Meeting of the Organization for Human Brain Mapping}, Geneva, Switzerland, June 26-30 2016.
+%
+%\leftskip=0em
+%\parindent=0em
+%
+%\section{\faPencilSquareO}{Teaching Experience}
+%
+%\uline{\large\bfseries{University of Oxford}  \hfill \large\bfseries{Oxford, UK}}
+%{\begin{addmargin}[2em]{0em}
+%
+%    \textmyfont{Data Sherpa for Covid-19 Data Challenge \hfill Michaelmas 2020}
+%    \begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
+%    \item Mentored three PhD students in analysing Covid-19 data obtained from Oxfordshire hospitals to investigate the impact of Covid-19 on diabetes and glycaemic control.
+%    \item Prepared the data for the students, carrying out data cleaning on electronic health records from thousands of hospital patients using Python.
+%    \end{itemize}
+%    \textmyfont{Statistics Demonstrator \hfill Michaelmas 2019, 2020}
+%    \begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
+%    \item Led online tutorials for PhD students enrolled in the graduate Statistics course where I assisted in practical exercises on modern statistical methods and machine learning.
+%    \item Taught students the fundamentals of regularised regression and Gaussian predictive models for machine learning.
+%    \end{itemize}
+%    \textmyfont{Introduction to Python Course Leader \hfill Michaelmas 2020}
+%    \begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
+%    \item Ran an introductory course on Python programming for a class of graduate students enrolled in the Centre for Doctoral Training PhD programme.
+%    \item Taught students about how to use the fundamental functions and packages needed for programming in Python, including tutorials on the numpy, pandas and scipy packages.
+%    \end{itemize}
+%\end{addmargin}}
+%\vspace{0.2cm}
+%\uline{\large\bfseries{University of Warwick}  \hfill \large\bfseries{Coventry, UK}}
+%{\begin{addmargin}[2em]{0em}
+%    \textmyfont{Statistics Tutor \hfill Spring 2017}
+%    \begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
+%    \item Led tutorials for a group of 20 undergraduate Statistics students taking the ST111 and ST112: Probabiliy A \& B modules.
+%    \item Taught students about the foundational notions of mathematical probability and marked assignments for each module.
+%     \end{itemize}
+%\end{addmargin}}
+%\vspace{0.2cm}
+%\uline{\large\bfseries{Teach First Insight Programme}  \hfill \large\bfseries{London, UK}}
+%{\begin{addmargin}[2em]{0em}
+%    \textmyfont{Teaching Intern \hfill Summer 2015}
+%    \begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
+%    \item Selected for a summer internship with Teach First to help tackle social inequality in the UK education system.
+%    \item Planned and delivered lessons to a class of 30+ students at Cranford Community College, Hounslow, interacting with students between the ages of 11 and 18.  
+%    \item Gave a presentation on my experiences to senior Teach First employees in Canary Wharf. 
+%     \end{itemize}
+%\end{addmargin}}
+%
+%   
+%\section{\faPencil}{Further Training}
+%
+%\work{University of Oxford \hfill Oxford, UK}{\uline{\textmyfont{fMRIB Graduate Programme} \hfill \textmyfont{Oct 2017 - Jul 2017}}}%
+%    {\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
+%    \item Learned about the scanning and analysis methodologies used for three different modalities of neuroimaging: functional MRI, structural MRI, and diffusion MRI.  
+%    \item Carried out practical examples using the methods I was taught within FSL. 
+%    \item Completed an exam at the end of each term. For the MRI Physics and MRI Analysis exams, I achieved scores of 91\% and 88\% respectively. 
+%    \end{itemize}
+%    }%
+%
+%\work{Lake Como School of Advanced Studies \hfill Lake Como, Italy}{\uline{\textmyfont{Bocconi Summer School in Advanced Statistics and Probability} \hfill \textmyfont{Jul 2017}}}%
+%    {\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
+%    \item One of 30 international students selected to participate in the summer school. 
+%    \item Learned about how statistical causal learning models can provide insight into machine learning tasks such as domain adaptation, transfer learning, and semi-supervised learning. 
+%    \end{itemize}
+%    }%
+%     
+%\work{Cambridge/Oxford/Durham/Glasgow Universities \hfill UK}%
+%    {\uline{\textmyfont{Academy for PhD Training in Statistics (APTS)} \hfill \textmyfont{Dec 2016 - Aug 2017}}}%
+%    {\begin{itemize}[topsep=0pt,itemsep=0pt,partopsep=0pt, parsep=0pt] 
+%    \item Completed four residential weeks of training in statistics and probability during the first year of my PhD (one week at each university).
+%    \item Learned about various aspects of statistical modelling, statistical inference and statistical computing across a total of eight intensive course modules.
+%    \end{itemize}
+%    }%
+%
+%\section{\faGears}{Skills}
+%
+%\textbf{Technical:} Python, R, Matlab, Unix, Github. \\
+%\textbf{Neuroimaging Analysis Software:} AFNI, FSL, SPM.  \\
+%\textbf{Research:} Data Preprocessing, Data Analysis, Statistical Testing, Simulations, Analysis of large neuroimaging datasets: UK Biobank, Human Connectome Project. \\
+%
+%\section{\faLaptop}{Covid-19 County Case Tracker}
+%
+%From March 2020-January 2021 I developed and maintained the \href{https://covid19cct.shinyapps.io/covid19cct/}{\textit{Covid-19 County Case Tracker}} R Shinyapp. I used R programming to harvest publicly available national Covid-19 data and provide visualisations of the trends in Covid-19 cases at the county-level in England and Scotland. During the first UK lockdown the app received over 100+ hours of usage per day, garnering attention from radio and media outlets including \href{https://grm.digital/heroes-of-covid19/info/}{GRM Digital} and the \href{https://www.oxfordmail.co.uk/news/18358052.app-tracks-oxfordshire-covid-19-cases/}{Oxford Mail}.
 
 \end{document}
