--- a/example.tex
+++ b/example.tex
@@ -45,7 +45,7 @@
   \item DRS project recognised with the \textbf{\href{https://www.theorsociety.com/ORS/ORS/About-OR/News/Presidents-Medal-award.aspx}{Operational Research Society Presidents Medal Award 2024}} for the best practical application of operational research.
 \item Principal model developer for the \textbf{\href{https://ssen-innovation.co.uk/nia-projects/vfes/}{Vulnerability Future Energy Scenarios (VFES)}} project with \textbf{Scottish and Southern Electricity Networks (SSEN)}, creating an \textbf{explainable AI model} to analyse vulnerability drivers and provide enhanced \textbf{decision intelligence} for strategic optimisation of customer support.
   \item VFES project recognised with the \textbf{\href{https://www.ssen.co.uk/news-views/2024/SSENs-innovative-net-zero-programmes-win-big-at-the-2024-Utility-Week-awards/}{Utility Week Unlocking Data Award 2024}} and the \textbf{\href{https://www.dataiq.global/award-winner/2024-dataiq-awards-best-use-of-ai-for-the-public-good/}{DataIQ Award for Best Use of AI for the Public Good 2024}}.
-  \item Led the implementation of \textbf{classification models using recurrent neural networks (RNNs)} for a \textbf{defence and security project}.
+  \item Led the implementation of \textbf{classification models using convolutional neural networks (CNNs)} for a \textbf{defence and security project}.
     \end{itemize}
     }%
 
